feat: :sparkles: mtl
metrics tracing log

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,48 @@ services:
     ports:
       - 6379:6379
 
+  nats:
+    image: nats:2.10-linux
+    ports:
+      - 4222:4222
+      - 8222:8222
+
+  prometheus:
+    image: prom/prometheus:v3.4.0
+    volumes:
+      - ./deploy/config/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - "9090:9090"
+
+  grafana:
+  # 服务名称 和 容器名称都会生成dns，服务名称带lb
+    image: grafana/grafana:11.6.1-ubuntu
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+    ports:
+      - "3000:3000"
+  jaeger-all-in-one:
+    image: jaegertracing/all-in-one:1.64.0
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318" 
+
+  loki:
+    image: grafana/loki:2.9.2
+    volumes:
+      - ./deploy/config/loki.yml:/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+
+  promtail:
+    image: grafana/promtail:2.9.2
+    volumes:
+      - ./deploy/config/promtail.yml:/etc/promtail/config.yml
+      - ./app/frontend/log:/logs/frontend
+    command: -config.file=/etc/promtail/config.yml
