--- a/app/frontend/conf/test/conf.yaml
+++ b/app/frontend/conf/test/conf.yaml
@@ -1,6 +1,7 @@
 hertz:
   service: "frontend"
   address: ":8090"
+  metrics_port: ":8091"
   enable_pprof: true
   enable_gzip: true
   enable_access_log: true
